# binhoc

./: .gitignore  Cargo.toml  LICENSE  README.md
binhoc/: Cargo.toml
binhoc/src/: lib.rs
binhoc_core/: Cargo.toml
binhoc_core/src/: lib.rs
binhoc_macros/: Cargo.toml
binhoc_macros/src/: adhoc_reqwest_fn.rs  lib.rs
binhoc_macros/tests/: test.rs
examples/: Cargo.toml
examples/yew-ssr/: Cargo.toml  Trunk.toml  index.html
examples/yew-ssr/src/: main.rs
examples/yew_ssr/: Cargo.toml  README.md  Trunk.toml  index.html
examples/yew_ssr/src/: lib.rs
examples/yew_ssr/static/: client_main-ce24c13592ef7f07.js  client_main-ce24c13592ef7f07_bg.wasm  index.html
