[package]
name = "binhoc"
version = "0.1.21"
edition = "2021"
authors = ["sjud"]
description = "Generate code for rust clients communicating with axum servers. "
repository = "https://github.com/sjud/axum_client_derive"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_arch = "wasm32")'.dependencies]
bincode = "2.0.0-rc.1"
binhoc_macros =  "0.2.11"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum-core = "0.3.0-rc.1"
hyper = "0.14.20"
async-trait = "0.1.57"
bincode = "2.0.0-rc.1"
binhoc_macros =  "0.2.11"
tower-layer = "0.3.1"
tower-service = "0.3.2"
