[package]
name = "binhoc_core"
version = "0.1.0"
edition = "2021"
authors = ["sjud"]
description = "Generate code for rust clients communicating with axum servers. "
repository = "https://github.com/sjud/axum_client_derive"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
axum-core = "0.3.0-rc.1"
bincode = "2.0.0-rc.1"
hyper = "0.14.20"