[package]
name = "binhoc_macros"
version = "0.2.12"
edition = "2021"
authors = ["sjud"]
description = "Generate code for rust clients communicating with axum servers. "
repository = "https://github.com/sjud/axum_client_derive"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = {version="1.0.99", features=["full"]}
quote = "1.0"

[dev-dependencies]
binhoc = {path="../binhoc"}
anyhow = "1.0.64"
reqwest = "0.11.11"
async-trait = "0.1.57"
hyper = "0.14.20"
bincode = {version="2.0.0-rc.1",features=["serde","derive"]}
axum = {version="0.6.0-rc.1",features=["headers"]}
tokio = {version = "1.21.0",features=["full"]}
http = "0.2.8"
bytes = "1.2.1"
uuid = {version="1.1.2",features=["v4","serde"]}
