[package]
name = "yew-ssr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew" , branch = "master", features = ["ssr"] }
axum = "0.6.0-rc.1"
reqwest = "0.11.11"
anyhow = "1.0.64"
bincode = "2.0.0-rc.1"
web-sys = {version="0.3.59",features=["HtmlInputElement"]}
binhoc_core = {path ="../../binhoc_core"}
tokio = "1.21.0"